src/styles/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

:root {
  --bg-color: rgb(2, 6, 10);
  --text-color: #EFEFEF;
  --font-family: Copperplate, Copperplate Gothic Light, fantasy;
}

.profile {
  display: flex;
  flex-wrap: wrap;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  text-align: center;
  align-items: center;
}

.wrapper {
  font-family: var(--font-family);
  display: flex;
  flex-wrap: wrap;
  color: var(--text-color);
  justify-content: center;
  align-items: center;
}

.btn{
    border: 1px solid white;
    border-radius: 5px;
    text-align: center;
    margin: 0vw 5vw 0vw 5vw;
    padding: 1vw 3vw 1vw 3vw;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

.title {
  text-align: center;
  display: flex;
  flex-direction: column;
  padding: 0 10vh;
  justify-content: center;
  align-items: center;
  font-size: 3vw;
}

.subtitle {
  text-align: center;
  padding-bottom: 4vh;
  font-size: 1vw;
  margin: 0vh 12vw 0vh 12vw;
}

.description {
  width: 30vw;
  font-size: 2vw;
  text-align: center;
  margin: auto;
}

.separator {
  border-bottom: 1px solid var(--text-color);
  width: 20vw;
  margin: 2vh auto 7vh auto;
}

.btn:hover {
  background-color: rgb(3, 3, 3, 0.2);
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

html {
  scroll-behavior: smooth;
}

.scroller {
  height: 300px;
  overflow-y: scroll;
  scroll-snap-type: y mandatory;
}

.scroller section {
  scroll-snap-align: start;
}

.homeLink {
  text-decoration: none;
  color: white;
  margin-left: 4vw;
}

.contact {
  text-decoration: none;
  color: white;
  margin-left: auto;
  margin-right: 4vw;
  text-decoration: none;
  font-size: 2vw;
}

.navbar {
  display: flex;
  position: sticky;
  flex-direction: row;
  color: #EFEFEF;
  font-size: 3vw;
  font-family: Copperplate, Copperplate Gothic Light, fantasy;
  top: 3vh;
}

#background-video {
  height: 100vh;
  width: 100vw;
  object-fit: cover;
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: -1;
  filter: brightness(60%);
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

#team, #about {
  background-color: var(--bg-color);
}

@media screen and (max-width: 768px) {
  .navbar {
    font-size: 2.5vw;
    top: 1vh;
    display: flex;
    justify-content: space-around;
  }

  .homeLink {
    font-size: 4vw;
    margin-left: 4vw;
    margin-top: 2vh;
  }

  .contact {
    font-size: 4vw;
    margin-right: 4vw;
    margin-top: 2vh;
  }

  .btn {
    margin: 0 auto;
    padding: 0.5vh 2vw;
  }

  #background-video {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: -1;
  }

  .title {
    font-size: 6vw;
  }

  .subtitle {
    font-size: 2vw;
    margin: 0vh 12vw 0vh 12vw; 
    text-align: center;
  }

  .description {
    width: 70vw;
    font-size: 5vw;
  }

  .separator {
    width: 50vw;
  }

  .wrapper {
    width: 50%;
  }
}

@media only screen and (max-width: 600px) {
  .title {
  font-size: 2em;
  }
  .subtitle {
    font-size: 0.8em;
    margin: 0vh 12vw 0vh 12vw;
    text-align: center;
    }
    
  .description {
    width: 80%;
    font-size: 1.5em;
    text-align: center;
    margin: auto;
  }

  .wrapper {
    width: 50%;
  }

  .homeLink {
    font-size: 4vw;
    margin-left: 4vw;
    margin-top: 2vh;
  }

  .contact {
    font-size: 4vw;
    margin-right: 4vw;
    margin-top: 2vh;
  }

  #background-video {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: -1;
  }
}

@media screen and (max-width: 576px) {
  .navbar {
    font-size: 2vw;
    top: 0;
  }

  .homeLink {
    font-size: 4vw;
    margin-top: 1vh;
    margin-left: 4vw;
  }

  .contact {
    font-size: 4vw;
    margin-top: 1vh;
    margin-right: 4vw;
  }

  .btn {
    margin: 0 auto;
    padding: 0.5vh 1vw;
  }

  .wrapper {
    width: 50%; /* ici */
  }

  #background-video {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: -1;
  }
}

@media screen and (max-width: 768px) {
  .keywords {
    flex-direction: column;
    align-items: center;
    width: 100%;
  }
}

